@@ -6,6 +6,8 @@ Changes since 0.2.8.3.x:
 - New first start menu with clearer language selection and initial setup.
 - Tutorial match against one AI at slower speed.
 - Tutorial tooltips for the most important keybindings.
+- ADD_MASTER_SERVER command to announce a server to a new master server.
+  Simplifies the process to list your server on a subculture.
 
 Changes since 0.2.8.3_rc4:
 - Intercepted chat commands are now written to ladderlog.txt. Format:
